Fixed weird overflow issue when expanding live log entries and made non-expandable entries not appear clickable

--- a/Duplicati/Server/webroot/ngax/less/style.less
+++ b/Duplicati/Server/webroot/ngax/less/style.less
@@ -204,7 +204,7 @@ ul.tabs {
     }
 
     .entries {
-        div.entryline {
+        div.entryline.clickable {
             cursor: pointer;
         }
     }
@@ -212,7 +212,6 @@ ul.tabs {
     .entries.livedata {
         li.expanded {
             height: auto;
-            overflow: auto;
         }
     }
 
